k8s/base/infrastructure/ingress/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
